<resources>
    <string name="app_name">AddressBookApp</string>
    <string name="addContact">Add Contact</string>
    <string name="showAllContacts">Show All Contacts</string>
    <string name="showContactById">Show Contact By ID</string>
    <string name="editContactById">Edit Contact By ID</string>
    <string name="searchByName">Search (name)</string>
    <string name="searchCity">Search (city)</string>
    <string name="searchDescription">Search (description)</string>
    <string name="addPersonalContact">Add Personal Contact</string>
    <string name="addBusinessContact">Add Business Contact</string>
    <string name="back">Back</string>
    <string name="id">Enter ID</string>
    <string name="searchId">Search</string>
    <string name="search">Search</string>
    <string name="addPhoto">Upload Photo</string>
    <string name="add">Add New Contact</string>
    <string name="photo">Update Photo Information</string>
    <string name="navToLocationUpdatePage">Update Location Info</string>
    <string name="updateConact">Update</string>
    <string name="nameHint">Name</string>
    <string name="phoneNumberHInt">Phone Number</string>
    <string name="photoNameHint">Photo Name</string>
    <string name="photoDatehint">Photo Date</string>
    <string name="photoDescriptionHint">Photo Description</string>
    <string name="streetAddressHint">Street Address</string>
    <string name="cityHint">City</string>
    <string name="stateHint">State</string>
    <string name="zipCodeHint">Zip Code</string>
    <string name="dateOfBirthHint">Date of Birth</string>
    <string name="contactDescriptionHint">Contact Description</string>
    <string name="openingTimeHint">Opening Time</string>
    <string name="closingTimeHint">Closing Time</string>
    <string name="websiteUrlHint">Website URL</string>
    <string name="enterIdHint">ID</string>
    <string name="searchForContacts">Search Contacts</string>
    <string name="updateYes">Yes</string>
    <string name="updateNo">No</string>
    <string name="companyNameHint">Company Name</string>
</resources>
