<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3c6382"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_addNewPersonalContact"
        android:layout_width="380dp"
        android:layout_height="53dp"
        android:layout_marginTop="84dp"
        android:background="#60a3bc"
        android:text="@string/addContact"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <Button
        android:id="@+id/btn_searchForContacts"
        android:layout_width="380dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:background="#86adbc"
        android:text="@string/searchForContacts"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_showAllContacts" />

    <Button
        android:id="@+id/btn_showAllContacts"
        android:layout_width="380dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:background="#73abbc"
        android:text="@string/showAllContacts"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_addNewPersonalContact" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Address Book"
        android:textColor="#ffd1bc"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_email"
        android:layout_width="380dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:background="#98B2BC"
        android:text="Email"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_searchForContacts" />

    <Button
        android:id="@+id/btn_text"
        android:layout_width="380dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:background="#ABB7BC"
        android:text="Text"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_email" />

    <Button
        android:id="@+id/btn_map"
        android:layout_width="380dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:background="#BEBDBC"
        android:text="Map"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_text" />

    <Button
        android:id="@+id/btn_call"
        android:layout_width="380dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:background="#D1C2BC"
        android:text="Call"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_map" />

</androidx.constraintlayout.widget.ConstraintLayout>